--- a/blogs/Bug——首次加载页面，向后端发起请求时返回502，再次发起请求时成功.md
+++ b/blogs/Bug——首次加载页面，向后端发起请求时返回502，再次发起请求时成功.md
@@ -1,3 +1,8 @@
+---
+layout: default
+tags: "Server"
+---
+
 # Bug——首次加载页面，向后端发起请求时返回502，再次发起请求时成功
 
 这个问题在第一次搭个人博客的时候就有了，虽然网站刷一下也能用，但是后来看着这个问题越看越不顺眼……
