--- a/blogs/导入并导出目录下模块文件的方法&使用桶文件的后果.md
+++ b/blogs/导入并导出目录下模块文件的方法&使用桶文件的后果.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-tags: "Js"
+date: 2025-07-25
+tags: Js
 ---
 
-# 导入并导出目录下模块文件的方法&使用桶文件的后果
+<!-- # 导入并导出目录下模块文件的方法&使用桶文件的后果 -->
 
 假设现在有一个目录为 `/test`，该目录下有三个文件分别为 `a.js`、`b.js`和`index.js`。
 
