--- a/blogs/面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？.md
+++ b/blogs/面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？.md
@@ -1,9 +1,10 @@
 ---
-layout: default
-tags: "Js"
+layout: post
+date: 2025-08-23
+tags: Js
 ---
 
-# 面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？
+<!-- # 面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？ -->
 
 这阵子面试，面试官问了一个问题：500条数据渲染卡顿如何解决？当时没答上来，说的用 `canvas` 画虚拟列表...下来研究了一下。没想到是用 `requestAnimationFrame` ，很久没用了，也没想起来，回顾一下，加深印象。
 
