--- a/blogs/面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？.md
+++ b/blogs/面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？.md
@@ -1,10 +1,15 @@
 ---
 layout: post
+title: 面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？
 date: 2025-08-23
 tags: Js
+previous:
+  title: Cookie，sessionStorage，localStorage，IndexedDB 介绍
+  url: /blogs/Cookie，sessionStorage，localStorage，IndexedDB介绍.md
+next:
+  title: Bug —— 首次加载页面，向后端发起请求时返回502，再次发起请求时成功
+  url: /blogs/Bug——首次加载页面，向后端发起请求时返回502，再次发起请求时成功.md
 ---
-
-<!-- # 面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？ -->
 
 这阵子面试，面试官问了一个问题：500条数据渲染卡顿如何解决？当时没答上来，说的用 `canvas` 画虚拟列表...下来研究了一下。没想到是用 `requestAnimationFrame` ，很久没用了，也没想起来，回顾一下，加深印象。
 
