--- a/blogs/Bug——首次加载页面，向后端发起请求时返回502，再次发起请求时成功.md
+++ b/blogs/Bug——首次加载页面，向后端发起请求时返回502，再次发起请求时成功.md
@@ -1,10 +1,15 @@
 ---
 layout: post
+title: Bug —— 首次加载页面，向后端发起请求时返回502，再次发起请求时成功
 date: 2025-08-26
 tags: Server
+previous:
+  title: 面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？
+  url: /blogs/面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？.md
+next:
+  title: 狂神 —— Docker学习笔记（一）
+  url: /blogs/狂神——Docker学习笔记（一）.md
 ---
-
-<!-- # Bug——首次加载页面，向后端发起请求时返回502，再次发起请求时成功 -->
 
 这个问题在第一次搭个人博客的时候就有了，虽然网站刷一下也能用，但是后来看着这个问题越看越不顺眼……
 
