--- a/blogs/导入并导出目录下模块文件的方法&使用桶文件的后果.md
+++ b/blogs/导入并导出目录下模块文件的方法&使用桶文件的后果.md
@@ -1,10 +1,15 @@
 ---
 layout: post
+title: 导入并导出目录下模块文件的方法&使用桶文件的后果
 date: 2025-07-25
 tags: Js
+previous:
+  title: Worker 之 SharedWorker 初探 —— 多个页面间共享资源
+  url: /blogs/Worker之SharedWorker初探——多个页面间共享资源.md
+next:
+  title: 语义化版本（SemVer）
+  url: /blogs/语义化版本（SemVer）.md
 ---
-
-<!-- # 导入并导出目录下模块文件的方法&使用桶文件的后果 -->
 
 假设现在有一个目录为 `/test`，该目录下有三个文件分别为 `a.js`、`b.js`和`index.js`。
 
