--- a/blogs/2025/07-21.md
+++ b/blogs/2025/07-21.md
@@ -3,9 +3,12 @@ layout: post
 title: Vue3 —— 使用 provide 和 inject 实现父组件和后代组件通信
 date: 2025-07-21
 tags: Vue
+previous:
+  title:
+  url:
 next:
   title: 手把手实现 Select 组件
-  url: /blogs/手把手实现Select组件.md
+  url: /blogs/2025/07-22.md
 ---
 
 Vue 官方文档
@@ -105,7 +108,7 @@ const value = inject(myInjectionKey1);
 
 同时，结合 [Vue 提供的 `InjectionKey` 接口](https://cn.vuejs.org/guide/typescript/composition-api.html#typing-provide-inject)，在提供者和消费者之间同步注入值的类型。
 
-```js
+```ts
 // key.js
 import type { InjectionKey } from "vue";
 export const myInjectionKey1 = Symbol('key1') as InjectionKey<string>;
@@ -136,7 +139,7 @@ if (!value) {
 
 将上述 `if` 判断封装成一个函数，每次需要使用 `inject` 时直接调用函数即可。
 
-```js
+```ts
 declare function injectStrict<T>(key: InjectionKey<T>, defaultValue?: T | (() => T), treatDefaultAsFactory?: boolean) : T;
 function injectStrict(key, defaultValue, treatDefaultAsFactory) {
   const value = inject(key, defaultValue, treatDefaultAsFactory);
@@ -153,7 +156,7 @@ function injectStrict(key, defaultValue, treatDefaultAsFactory) {
 
 这里以 `<Form>` 和 `<FormItem>` 组件进行举例，外界传递给 `<Form>` 组件的样式相关属性需要进一步传递给 `<FormItem>` 组件进行使用：
 
-```js
+```vue
 // Form.vue
 <template>
   <form :class="formClass" :style="{width}">
@@ -187,7 +190,7 @@ provide('labelAlign', props.labelAlign);
 </script>
 ```
 
-```js
+```vue
 // FormItem.vue
 <template>
   <div :class="formItemClass">
