--- a/blogs/2025/07-29.md
+++ b/blogs/2025/07-29.md
@@ -5,10 +5,10 @@ date: 2025-07-29
 tags: Js
 previous:
   title: 导入并导出目录下模块文件的方法&使用桶文件的后果
-  url: /blogs/导入并导出目录下模块文件的方法&使用桶文件的后果.md
+  url: /blogs/2025/07-25-2.md
 next:
   title: Cookie，sessionStorage，localStorage，IndexedDB 介绍
-  url: /blogs/Cookie，sessionStorage，localStorage，IndexedDB介绍.md
+  url: /blogs/2025/08-01.md
 ---
 
 #### 版本格式：
