--- a/blogs/2025/08-01.md
+++ b/blogs/2025/08-01.md
@@ -5,10 +5,10 @@ date: 2025-08-01
 tags: Js
 previous:
   title: 语义化版本（SemVer）
-  url: /blogs/语义化版本（SemVer）.md
+  url: /blogs/2025/07-29.md
 next:
   title: 面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？
-  url: /blogs/面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？.md
+  url: /blogs/2025/08-23.md
 ---
 
 参考链接：
