--- a/blogs/2025/09-22.md
+++ b/blogs/2025/09-22.md
@@ -4,8 +4,11 @@ title: 使用 Github 搭建静态站点（一）
 date: 2025-09-22
 tags: GitHub
 previous:
-	title: 编码规范工程化 —— Commitlint
-  url: /blogs/编码规范工程化——Commitlint.md
+  title: WeakMap 使用指南（实现私有属性）
+  url: /blogs/2025/09-19.md
+next:
+  title:
+  url:
 ---
 
 阿里云服务器到期了，给博客数据做备份也麻烦，想着直接用静态站点得了
