--- a/blogs/2025/08-27-2.md
+++ b/blogs/2025/08-27-2.md
@@ -4,11 +4,11 @@ title: 狂神 —— Docker 学习笔记（二）
 date: 2025-08-27
 tags: Server
 previous:
-	title: 狂神 —— Docker学习笔记（一）
-  url: /blogs/狂神——Docker学习笔记（一）.md
+  title: 狂神 —— Docker 学习笔记（一）
+  url: /blogs/2025/08-27-1.md
 next:
-	title: 编码规范工程化 —— Commitlint
-  url: /blogs/编码规范工程化——Commitlint.md
+  title: 编码规范工程化 —— Commitlint
+  url: /blogs/2025/09-17.md
 ---
 
 ## 容器管理可视化面板
