--- a/blogs/2025/08-26.md
+++ b/blogs/2025/08-26.md
@@ -18,10 +18,8 @@ next:
 
 必须解决！安排！
 
-------------------------------------
-
-代码环境：前端发送请求 --> nginx --(反向代理)--> 后端(Node)，使用 pm2 管理进程。
-系统环境：阿里云 ---- Centos 8（`cat /etc/os-release`）
+**代码环境**：前端发送请求 --> nginx --(反向代理)--> 后端(Node)，使用 pm2 管理进程。
+**系统环境**：阿里云 ---- Centos 8（`cat /etc/os-release`）
 
 这里先说明一下我解决这个问题的流程：
 
