--- a/blogs/2025/07-25-2.md
+++ b/blogs/2025/07-25-2.md
@@ -5,10 +5,10 @@ date: 2025-07-25
 tags: Js
 previous:
   title: Worker 之 SharedWorker 初探 —— 多个页面间共享资源
-  url: /blogs/2025/07-25-1.md
+  url: /blogs/2025/07-25-1.html
 next:
   title: 语义化版本（SemVer）
-  url: /blogs/2025/07-29.md
+  url: /blogs/2025/07-29.html
 ---
 
 假设现在有一个目录为 `/test`，该目录下有三个文件分别为 `a.js`、`b.js`和`index.js`。
