--- a/blogs/2025/08-23.md
+++ b/blogs/2025/08-23.md
@@ -5,10 +5,10 @@ date: 2025-08-23
 tags: Js
 previous:
   title: Cookie，sessionStorage，localStorage，IndexedDB 介绍
-  url: /blogs/2025/08-01.md
+  url: /blogs/2025/08-01.html
 next:
   title: Bug —— 首次加载页面，向后端发起请求时返回502，再次发起请求时成功
-  url: /blogs/2025/08-26.md
+  url: /blogs/2025/08-26.html
 ---
 
 这阵子面试，面试官问了一个问题：500条数据渲染卡顿如何解决？当时没答上来，说的用 `canvas` 画虚拟列表...下来研究了一下。没想到是用 `requestAnimationFrame` ，很久没用了，也没想起来，回顾一下，加深印象。
