--- a/blogs/2025/08-26.md
+++ b/blogs/2025/08-26.md
@@ -5,10 +5,10 @@ date: 2025-08-26
 tags: Server
 previous:
   title: 面试题：500条数据渲染加载卡顿（分页），不能使用懒加载、虚拟滚动，如何解决？
-  url: /blogs/2025/08-23.md
+  url: /blogs/2025/08-23.html
 next:
   title: 狂神 —— Docker学习笔记（一）
-  url: /blogs/2025/08-27-1.md
+  url: /blogs/2025/08-27-1.html
 ---
 
 这个问题在第一次搭个人博客的时候就有了，虽然网站刷一下也能用，但是后来看着这个问题越看越不顺眼……
