--- a/blogs/2025/08-27-2.md
+++ b/blogs/2025/08-27-2.md
@@ -5,10 +5,10 @@ date: 2025-08-27
 tags: Server
 previous:
   title: 狂神 —— Docker 学习笔记（一）
-  url: /blogs/2025/08-27-1.md
+  url: /blogs/2025/08-27-1.html
 next:
   title: 编码规范工程化 —— Commitlint
-  url: /blogs/2025/09-17.md
+  url: /blogs/2025/09-17.html
 ---
 
 ## 容器管理可视化面板
