--- a/blogs/2025/09-17.md
+++ b/blogs/2025/09-17.md
@@ -5,10 +5,10 @@ date: 2025-09-17
 tags: 工程化
 previous:
   title: 狂神 —— Docker 学习笔记（二）
-  url: /blogs/2025/08-27-2.md
+  url: /blogs/2025/08-27-2.html
 next:
   title: WeakMap 使用指南（实现私有属性）
-  url: /blogs/2025/09-19.md
+  url: /blogs/2025/09-19.html
 ---
 
 为了更好地理解和使用 commitlint 及其相关生态，今天特意花了一上午时间读 commitlint 的源码，这里做一个学习记录，方便后续回顾。
