--- a/blogs/2025/09-19.md
+++ b/blogs/2025/09-19.md
@@ -5,10 +5,10 @@ date: 2025-09-19
 tags: Js
 previous:
   title: 编码规范工程化 —— Commitlint
-  url: /blogs/2025/09-17.md
+  url: /blogs/2025/09-17.html
 next:
   title: 使用 Github 搭建静态站点（一）
-  url: /blogs/2025/09-22.md
+  url: /blogs/2025/09-22.html
 ---
 
 最近在读 ESLint 的源码，看到作者在实例化 ESLint 类的时候会将一些变量存储到 WeakMap 中，觉得这个用法应该好好记录一下。这里研究一下为什么使用 WeakMap 来进行存储，以及哪些变量/数据需要使用 WeakMap 进行存储，学习一下 WeakMap 的使用场景。
