--- a/blogs/2025/07-21.md
+++ b/blogs/2025/07-21.md
@@ -5,7 +5,7 @@ date: 2025-07-21
 tags: Vue
 next:
   title: 手把手实现 Select 组件
-  url: /blogs/2025/07-22.md
+  url: /blogs/2025/07-22.html
 ---
 
 Vue 官方文档
