--- a/blogs/2025/09-22.md
+++ b/blogs/2025/09-22.md
@@ -5,7 +5,7 @@ date: 2025-09-22
 tags: GitHub
 previous:
   title: WeakMap 使用指南（实现私有属性）
-  url: /blogs/2025/09-19.md
+  url: /blogs/2025/09-19.html
 ---
 
 阿里云服务器到期了，给博客数据做备份也麻烦，想着直接用静态站点得了
