--- a/blogs/2025/08-01.md
+++ b/blogs/2025/08-01.md
@@ -52,8 +52,8 @@ Cookie: key1=value1; key2=value2 ...
 
 ### 特点
 
-- 1.可设置过期时间。但无法直接删除 Cookie，需要将过期时间设置为当前时间之前。
-- 2.Cookie 在跨站点请求中通常不会发送，但有例外情况——首先，`Secure` 未设置或值为 `Lax` ，然后对于“安全”的顶级导航（**`GET` 请求，且是顶级导航**，比如用户点击链接或重定向），Cookie 仍会被发送。
+- 可设置过期时间。但无法直接删除 Cookie，需要将过期时间设置为当前时间之前。
+- Cookie 在跨站点请求中通常不会发送，但有例外情况——首先，`Secure` 未设置或值为 `Lax` ，然后对于“安全”的顶级导航（**`GET` 请求，且是顶级导航**，比如用户点击链接或重定向），Cookie 仍会被发送。
 
 ### 使用场景
 
@@ -96,11 +96,11 @@ Cookie: type=ninja; language=javascript
 
 ### 特点
 
-- 1.会话结束（关闭 Tab/浏览器）时数据被清除。
-- 2.重新加载页面数据并不会被清除（刷新）。
-- 3.“新标签或窗口打开一个页面时会复制定级浏览会话上下文作为新会话的上下文，这点和 session cookie 的运行方式不同”。
-- 4.打开多个相同 URL 的 Tab 页面，会创建各自的 sessionStorage，不会共享。
-- 5.存储的数据是特定于页面的协议的，也就是**受同源策略限制**。
+- 会话结束（关闭 Tab/浏览器）时数据被清除。
+- 重新加载页面数据并不会被清除（刷新）。
+- “新标签或窗口打开一个页面时会复制定级浏览会话上下文作为新会话的上下文，这点和 session cookie 的运行方式不同”。
+- 打开多个相同 URL 的 Tab 页面，会创建各自的 sessionStorage，不会共享。
+- 存储的数据是特定于页面的协议的，也就是**受同源策略限制**。
 
 ### 形式
 
@@ -128,9 +128,9 @@ Cookie: type=ninja; language=javascript
 
 ### 特点
 
-- 1.相对于 sessionStorage，localStorage 的数据可以**长期保留**，即使浏览器关闭（**建议程序中手动封装设置过期时间，否则数据会一直存在**）。
-- 2.和 sessionStorage 一样，存储的数据是特定于页面的协议的，也就是**受同源策略限制**，不同源的页面间无法共享数据。
-- 3.**不能频繁存储大量数据，因为写入数据时会阻塞页面**。
+- 相对于 sessionStorage，localStorage 的数据可以**长期保留**，即使浏览器关闭（**建议程序中手动封装设置过期时间，否则数据会一直存在**）。
+- 和 sessionStorage 一样，存储的数据是特定于页面的协议的，也就是**受同源策略限制**，不同源的页面间无法共享数据。
+- **不能频繁存储大量数据，因为写入数据时会阻塞页面**。
 
 ### 使用场景
 
@@ -174,10 +174,10 @@ const myStorage = {
 
 ### 特点
 
-- 1.异步执行操作
-- 2.用于大量数据的本地存储
-- 3.和 worker 结合，存储数据时不会对页面造成阻塞
-- 4.使用索引实现对数据的高性能搜索
+- 异步执行操作
+- 用于大量数据的本地存储
+- 和 worker 结合，存储数据时不会对页面造成阻塞
+- 使用索引实现对数据的高性能搜索
 
 ### 大小
 
