--- a/blogs/2025/09-19.md
+++ b/blogs/2025/09-19.md
@@ -84,9 +84,9 @@ m.has(c); // false
 
 通常，Symbol 可以分为以下三种：
 
-- （1）非全局注册 Symbol —— `Symbol()`
-- （2）全局注册 Symbol —— `Symbol(description)`，`Symbol.for(key)`如果在全局注册中未查找到对应的 symbol 也会全局注册。
-- （3）[内置 Symbol](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Symbol#%E5%86%85%E7%BD%AE%E9%80%9A%E7%94%A8%EF%BC%88well-known%EF%BC%89symbol)
+- 非全局注册 Symbol —— `Symbol()`
+- 全局注册 Symbol —— `Symbol(description)`，`Symbol.for(key)`如果在全局注册中未查找到对应的 symbol 也会全局注册。
+- [内置 Symbol](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Symbol#%E5%86%85%E7%BD%AE%E9%80%9A%E7%94%A8%EF%BC%88well-known%EF%BC%89symbol)
 
 ![Description](/images/weakmap_symbol.png)
 
@@ -208,9 +208,9 @@ class Test() {
 
 通过 WeakMap 来使用私有属性，可以细数出以下优点：
 
-- a. 既能实现统一管理私有属性，又能方便垃圾回收，避免内存泄漏。
-- b. ES6 开始支持 WeakMap 数据结构，兼容性相对来说会更好。
-- c. 真正实现私有化。
+- 既能实现统一管理私有属性，又能方便垃圾回收，避免内存泄漏。
+- ES6 开始支持 WeakMap 数据结构，兼容性相对来说会更好。
+- 真正实现私有化。
 
 基于上述优点，一些常见框架比如 Vue 在实现响应式时，也使用到了 WeakMap，对响应式变量的订阅进行收集。一旦响应式变量被回收，那么相应的一系列副作用也会被回收。一是方便进行统一管理（后续对副作用的执行），二是方便进行垃圾回收。 ( [深入响应式系统](https://cn.vuejs.org/guide/extras/reactivity-in-depth.html#how-reactivity-works-in-vue))
 
