--- a/blogs/2025/08-27-1.md
+++ b/blogs/2025/08-27-1.md
@@ -67,7 +67,7 @@ sudo dnf remove docker \
 ```bash
 sudo dnf -y install dnf-plugins-core # dnf 是包管理器
 ```
-###### 配置阿里云镜像
+配置阿里云镜像：
 
 登录阿里云控制台-->容器镜像服务，按说明配置即可。
 
