--- a/blogs/2025/09-17.md
+++ b/blogs/2025/09-17.md
@@ -94,7 +94,7 @@ git commit -m "commit_msg"
 
 ##### 客户端钩子
 
-###### (1) Committing-Workflow Hooks（由 `git commit` 命令触发）
+(1) Committing-Workflow Hooks（由 `git commit` 命令触发）
 
 - pre-commit 用于检查代码（lint）
 - prepare-commit-msg
@@ -153,23 +153,23 @@ jobs:
           apt install -y sudo # 安装 sudo 命令
           sudo apt install -y git curl # 安装 git，curl
           curl -sL https://deb.nodesource.com/s/etup_14.x | sudo -E bash - # 添加 NodeSource 的 Node.js 14.x 软件源到系统
-					sudo DEBIAN_FRONTEND=nointeractive apt install -y nodejs # 安装 node.js
-			- name: Print versions
-				run: |
-					git --version
-					node --version
-					npm --version
-					npx commitlint --version
-			- name: Install commitlint
-				run: |
-					npm install conventional-changelog-conventionalcommits
-					npm install commitlint@latest
-			- name: Validate current commit (last commit) with commitlint
-				if: github.event_name == 'push'
-				run: npx commitlint --last --verbose
-			- name: Validate PR commits with commitlint
-				if: github.event_name == 'pull_request'
-				run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+          sudo DEBIAN_FRONTEND=nointeractive apt install -y nodejs # 安装 node.js
+      - name: Print versions
+        run: |
+          git --version
+          node --version
+          npm --version
+          npx commitlint --version
+      - name: Install commitlint
+        run: |
+          npm install conventional-changelog-conventionalcommits
+          npm install commitlint@latest
+      - name: Validate current commit (last commit) with commitlint
+        if: github.event_name == 'push'
+        run: npx commitlint --last --verbose
+      - name: Validate PR commits with commitlint
+        if: github.event_name == 'pull_request'
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
 ```
 
 ## 交互式提示
@@ -180,7 +180,9 @@ jobs:
 
 （1）安装
 
-`npm install -D @commitlint-prompt-cli`
+```bash
+npm install -D @commitlint-prompt-cli
+```
 
 （2）在 package.json 中添加脚本
 
@@ -194,7 +196,7 @@ jobs:
 
 （3）运行
 
-```json
+```bash
 npm run commit
 ```
 
