--- a/blogs/2025/07-21.md
+++ b/blogs/2025/07-21.md
@@ -28,11 +28,11 @@ provide(key, value);
 
 #### 参数
 
-`key`
+- `key`
 
 注入的 key，用于表示唯一性。可以是一个字符串或 Symbol 。
 
-`value`
+- `value`
 
 要注入的值。
 
@@ -46,15 +46,15 @@ const value = inject(key, defaultValue, treatDefaultAsFactory);
 
 #### 参数
 
-`key`
+- `key`
 
 注入的 key。Vue 会遍历父组件链，找到 key 所对应的值。当链上多个父组件对同一个 key 提供了值时，会采取**就近原则**，选取离子组件最近的值。
 
-`defaultValue`
+- `defaultValue`
 
 可选。在父组件链上没有找到 key 对应的值提供时，会使用**默认值**。如果 inject 没有提供默认值，则默认值为 **undefined** 。默认值可以是一个工厂函数，详见第三个参数。
 
-`treatDefaultAsFactory`
+- `treatDefaultAsFactory`
 
 可选。是否将默认值视作工厂函数，布尔值。为 `true` 时，默认值将作为工厂函数被调用，函数的返回值作为 inject 的默认值。**这是为了避免在用不到默认值的情况下进行不必要的计算或产生副作用。**
 
@@ -74,13 +74,13 @@ const count = inject("count");
 console.log(count); // 0
 ```
 
-### 存在的问题
+## 存在的问题
 
 项目中过多使用 provide 和 inject 时，会造成数据来源不清晰、注入 `key` 冲突（重复）以及重复时上层值会被覆盖的问题。
 
-### 解决方式
+## 解决方式
 
-#### 1. 解决 `key` 冲突问题：
+### 1. 解决 `key` 冲突问题：
 
 官方推荐[使用 Symbol 作为注入名](https://cn.vuejs.org/guide/components/provide-inject.html#working-with-symbol-keys)，并在一个单独的文件中导出这些注入名。
 
@@ -100,7 +100,7 @@ import { myInjectionKey1 } from "./key.js";
 const value = inject(myInjectionKey1);
 ```
 
-#### 2. 同步注入类型
+### 2. 同步注入类型
 
 同时，结合 [Vue 提供的 `InjectionKey` 接口](https://cn.vuejs.org/guide/typescript/composition-api.html#typing-provide-inject)，在提供者和消费者之间同步注入值的类型。
 
@@ -117,7 +117,7 @@ provide(myInjectionKey1, "hello world"); // √ 提供的值类型符合 Injecti
 provide(myInjectionKey2, 10); // × 提供的值类型不符合 InjectionKey 类型，应为 string 类型但提供的值为 number 类型
 ```
 
-#### 3. 要求父组件链必须提供注入值
+### 3. 要求父组件链必须提供注入值
 
 默认情况下，如果父组件链没有提供 `inject` 所需的注入值，则会使用默认值。但有些情况下必须要求父组件提供注入值，通常是一些 UI 组件的封装。例如 `<FormItem>` 组件必须在 `<Form>` 组件中使用，因此 `<Form>` 组件必须将部分外界传递进来的值传递给 `<FormItem>` 组件进行使用。
 
@@ -131,7 +131,7 @@ if (!value) {
 }
 ```
 
-#### 4. 进一步优化
+### 4. 进一步优化
 
 将上述 `if` 判断封装成一个函数，每次需要使用 `inject` 时直接调用函数即可。
 
