--- a/blogs/2025/07-22.md
+++ b/blogs/2025/07-22.md
@@ -15,7 +15,7 @@ next:
 
 首先扒一下各大 UI 组件库的 Select 组件，这里拿 [AntD 的 Select 组件](https://www.antdv.com/components/select-cn)作为参考，这里我们需要用到的属性和事件如下：
 
-属性：
+#### 属性：
 
 ![Description](/images/190221-767898062.png)
 
@@ -23,7 +23,7 @@ next:
 
 ![Description](/images/190221-70815212.png)
 
-事件：
+#### 事件：
 
 ![Description](/images/190221-6773805.png)
 
@@ -31,25 +31,35 @@ next:
 
 ![Description](/images/190221-427037939.png)
 
-#### 需求分析：
+### 需求分析：
 
 1. 组件结构
+
  （1）输入框（单选/多选是并不能真的输入，只是用于触发下拉框的展示）
+
  （2）下拉列表（动画）
+ 
  （3）多选/标签模式，对用户选中选项进行打勾，区分展示。
+
  （4）标签模式，需要在输入框中 inline 展示标签列表。
 
 2. 功能需求
+
  （1）支持单选/多选/标签三种模式。标签模式下，可以通过输入新增标签。
+
  （2）标签模式下，新增的数据是临时性的，需要用户自行请求保存到数据库中。
+
  （3）标签可以进行删除。取消选中或删除时都会抛出 deselect 事件。
+
  （4）多选时，组件初始自动显示光标。
 
 3. 重点分析
+
  （1）事件冒泡和捕获，例如点击事件和功能冲突时，需要通过 mouse 事件来解决
+
  （2）标签模式下，用户输入内容需要对内容长度进行计算，动态修改 input 的宽度。这是因为 input 跟在 tags 列表之后。这里借一个单独的 span 元素进行内容长度计算。
 
-#### 组件模板
+### 组件模板
 
 ```html
 <template>
@@ -129,7 +139,7 @@ next:
 </template>
 ```
 
-#### 组件外部传递的属性
+### 组件外部传递的属性
 
 ```js
 const props = defineProps<{
@@ -151,7 +161,7 @@ const props = defineProps<{
 }>();
 ```
 
-#### 组件抛出事件
+### 组件抛出事件
 
 ```js
 const emit = defineEmits(["update:value", "change", "focus", "blur", "deselect", "select"]);
@@ -166,7 +176,7 @@ const emit = defineEmits<{
 }>()
 ```
 
-#### 组件内部变量
+### 组件内部变量
 
 ```js
 const inputRef = ref<HTMLInputElement | null>(null); // input元素的引用
@@ -178,7 +188,7 @@ const open = ref<boolean>(false); // 控制是否显示下拉选项列表
 const focusRef = ref<boolean>(false); // 组件是否是聚焦状态
 ```
 
-#### 计算属性
+### 计算属性
 
 ```js
 // 当为多选时计算input内容变化时input的宽度
@@ -209,7 +219,7 @@ const selected = computed(() => {
 })
 ```
 
-#### 事件处理
+### 事件处理
 
 ```js
 // 处理用户输入
@@ -283,9 +293,9 @@ function handleBlur(e) {
 }
 ```
 
-### 扩展
+## 扩展
 
-#### 计算 input 宽度
+### 计算 input 宽度
 
 使用一个单独的 span 标签计算 input 的宽度时，我们通过监听 input 事件，然后通过 `event.data` 获取到用户在输入态时的内容（**尤其是用户通过拼音输入法开始输入汉字时，用户输入时并不会立即成为 input 的 value，此时输入的内容会处于下划虚线的状态**）。
 
@@ -301,19 +311,19 @@ position: absolute;
 
 这里扩展一个内容 —— **输入合成事件**
 
-##### compositionstart 
+#### compositionstart 
 
 input 开始新的输入合成时触发
 
-##### compositionupdate
+#### compositionupdate
 
 字符被输入到一段文字的时候（输入状态变化）触发
 
-##### compositionend
+#### compositionend
 
 文本段落的组成完成或取消时触发
 
-##### 示例
+#### 示例
 
 ```js
 const inputElement = document.querySelector('input[type="text"]');
@@ -325,15 +335,15 @@ inputElement.addEventListener("compositionstart", (event) => {
 
 **但这里我们依然要处理用户输入字符、英文时的 input 宽度（输入内容会直接成为 input 的 value），因此直接使用 input 事件进行计算即可。**
 
-#### 事件阶段
+## 事件阶段
 
 捕获阶段 ---- 目标阶段 ---- 冒泡阶段
 
 ![Description](/images/090237-796102541.png)
 
-事件委托（捕获）：触发事件时，事件从祖先元素逐级向下传递到 `event.target`。
+**事件委托（捕获）**：触发事件时，事件从祖先元素逐级向下传递到 `event.target`。
 
-事件冒泡：触发事件时，事件从 `event.target` 逐级向上向祖先元素进行传递。
+**事件冒泡**：触发事件时，事件从 `event.target` 逐级向上向祖先元素进行传递。
 
 [MDN 事件冒泡和事件委托](https://developer.mozilla.org/zh-CN/docs/Learn_web_development/Core/Scripting/Event_bubbling)
 
@@ -386,6 +396,6 @@ oInput.addEventListener("focus", () => {
 
 因为 `mousedown` 事件存在默认行为：**会让元素进行聚焦**（元素本身可聚焦或设置了 `tabindex` 属性）。但我们要自行控制 `input` 元素的聚焦行为，因此需要阻止 `mousedown` 事件的默认行为。
 
-一个让普通元素可以聚焦的方式：
+### 一个让普通元素可以聚焦的方式：
 
 [MDN tabindex](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Reference/Global_attributes/tabindex)
