--- a/blogs/2025/07-25-2.md
+++ b/blogs/2025/07-25-2.md
@@ -26,9 +26,9 @@ export const b = 2;
 实现将该目录的文件导出集中到一个文件中后再导出。
 
 
-### ESM 导入导出
+## ESM 导入导出
 
-#### 1. 使用 `import.meta.glob()`
+### 1. 使用 `import.meta.glob()`
 
 示例：引入 `/api` 目录下的除 `index.js` 的所有 `js` 文件模块，合并到一个对象中导出。
 
@@ -45,16 +45,16 @@ export default apiModule;
 
 上述方式在 `Vite` 中可用，因为 `Vite` 使用的模块化方式是 ESM。
 
-#### 2. 手动导出（不推荐）
+### 2. 手动导出（不推荐）
 
 ```js
 export * as a from './a.js';
 export * as b from './b.js';
 ```
 
-### CJS 导入导出
+## CJS 导入导出
 
-#### 1. 使用 Node.js 的 `fs.readdirSync()` 方法
+### 1. 使用 Node.js 的 `fs.readdirSync()` 方法
 
 ```js
 const fs = require("fs");
@@ -73,7 +73,7 @@ files.forEach((file) => {
 module.exports = modules;
 ``` 
 
-#### 2. 使用第三方插件 `require-all`
+### 2. 使用第三方插件 `require-all`
 
 [NPM 包](https://www.npmjs.com/package/require-all)
 
@@ -96,14 +96,14 @@ const modules = requireAll({
 exports = modules;
 ```
 
-#### 3. 手动导出（不推荐）
+### 3. 手动导出（不推荐）
 
 ```js
 exports.a = require('./a');
 exports.b = require('./b');
 ```
 
-### 使用 Webpack 的 `require.context()` 方法
+## 使用 Webpack 的 `require.context()` 方法
 
 ```js
 const requireApi = require.context('.', true, /.js$/);
@@ -118,26 +118,26 @@ requireApi.keys().forEach((key) => {
 export default module;
 ```
 
-### 使用第三方插件 `glob`
+## 使用第三方插件 `glob`
 
 [NPM 包](https://www.npmjs.com/package/glob)
 
 ‼️上述方式都使用了**桶文件（将其他文件中的模块整合到一个文件中导出）**，如果模块文件很多，尤其是在大型项目中，会有明显的**性能问题**。
 
-### 桶文件（Barrel Files）
+## 桶文件（Barrel Files）
 
-#### 什么是桶文件？
+### 什么是桶文件？
 
 将多个模块文件引入到同一个文件后导出，方便有一个统一的入口去引入。
 
 Vite 官方文档中也说明了，应该[避免使用桶文件](https://cn.vitejs.dev/guide/performance#avoid-barrel-files)。因为 Vite 在开发阶段是不会进行 tree shaking 的，如果项目中存在桶文件并且一些模块并没有被使用，这无疑会大大增加构建时间和页面加载时间。[vite Issues: Consider treeshaking module for serving files in dev mode #8237](https://github.com/vitejs/vite/issues/8237#issuecomment-1285887097)
 
-#### 使用桶文件带来的性能问题：
+### 使用桶文件带来的性能问题：
 
 （1）影响模块分析效率。在 bundle 阶段，一是使用可以 tree shaking 的打包工具时，需要分析哪些模块是否被使用，从而减小打包文件体积，但同时增加了分析的开销，bundle time 增加；而是如果进行分包（code splitting），以便按需加载，提高 runtime 性能，但是在构建时需要计算哪些包需要被分开，bundle time 增加。也就是我们进行更多优化来利于 runtime 的同时，我们的构建成本实际上是增加的。
 （2）不利于查找接口真正来源。
 
-#### 如何进行优化？
+### 如何进行优化？
 
 [Vercel: How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js)
 
