--- a/blogs/2025/08-27-1.md
+++ b/blogs/2025/08-27-1.md
@@ -14,9 +14,10 @@ next:
 只要学不死，就往死里学。   —— 狂神 🤷‍♀️
 
 ## 几个概念
-Image：镜像
-Container：容器
-Docker Hub：镜像仓库地址（可以看作类似 GitHub 的仓库，用来远程存储镜像的，用途不同而已）
+
+- Image：镜像
+- Container：容器
+- Docker Hub：镜像仓库地址（可以看作类似 GitHub 的仓库，用来远程存储镜像的，用途不同而已）
 
 ## 安装 Docker
 
@@ -50,7 +51,7 @@ REDHAT_SUPPORT_PRODUCT_VERSION="8"
 
 ### 安装
 
-##### （1）移除旧的安装包
+（1）移除旧的安装包
 如果之前有安装过 Docker 或者系统自带的，需要删除之前的安装包，避免冲突。
 ```bash
 sudo dnf remove docker \
@@ -62,7 +63,7 @@ sudo dnf remove docker \
                 docker-logrotate \
                 docker-engine
 ```
-##### （2）配置镜像仓库
+（2）配置镜像仓库
 这里推荐使用阿里云的镜像仓库，不要使用官方的，国外的会导致镜像拉取不下来。
 ```bash
 sudo dnf -y install dnf-plugins-core # dnf 是包管理器
@@ -75,7 +76,7 @@ sudo dnf -y install dnf-plugins-core # dnf 是包管理器
 参考：
 [阿里云 官方镜像加速](https://help.aliyun.com/zh/acr/user-guide/accelerate-the-pulls-of-docker-official-images)
 
-##### （3）启动 Docker Engine
+（3）启动 Docker Engine
 
 ```bash
 # 手动启动
@@ -85,7 +86,7 @@ sudo systemctl start docker
 sudo systemctl enable --now docker
 ```
 
-##### （4）测试
+（4）测试
 
 ```bash
 sudo docker run hello-world
@@ -95,7 +96,8 @@ sudo docker run hello-world
 
 ![Description](/images/173244-976101231.png)
 
-##### （5）卸载 Docker Engine
+（5）卸载 Docker Engine
+
 ```bash
 # 删除安装包
 sudo dnf remove docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin docker-ce-rootless-extras
@@ -109,12 +111,14 @@ sudo rm -rf /var/lib/containerd
 ![Description](/images/102243-447940397.png)
 
 Docker 和 VM（虚拟机）的区别，Docker 为什么更快？
+
 ![Description](/images/102243-14081066.jpg)
+
 Docker 利用的是宿主机的内核，当启动一个容器时，不需要再像虚拟机一样加载一个操作系统内核。大大提升了加载时间。
 
 ## Docker 常用命令
 
-### 帮助命令
+### （一）帮助命令
 
 ```bash
 docker version # 查看 docker 版本信息
@@ -123,9 +127,10 @@ docker --help # 查看帮助信息
 docker <command> --help # 查看某个命令的具体帮助信息
 ```
 
-### 镜像命令
+### （二）镜像命令
 
-#### docker images 查看镜像列表
+#### 1. `docker images` 查看镜像列表
+
 ```shell
 [root@iZ2ze41p5bh3hk80pucxofZ ~]# docker images
 REPOSITORY    TAG       IMAGE ID       CREATED       SIZE
@@ -146,7 +151,7 @@ hello-world   latest    feb5d9fea6a5   3 years ago   13.3kB
 # --format <string> 配置镜像列表的显示格式（默认使用 “table” 进行展示，还有一种是 “json” 字符串的形式）
 ```
 
-#### docker search <repository_name> 从 Docker Hub 搜索镜像
+#### 2. `docker search <repository_name>` 从 Docker Hub 搜索镜像
 
 ⚠️这里有个问题就是即使配置了镜像，`docker search` 还是会走国外的 `index.docker.io`，开代理也不一定管用。可以在 `search` 的时候加上国内镜像源。写此文的时候这个是可用的 `docker search docker-0.unsee.tech/mysql`。[此镜像源网站地址](https://docker-0.unsee.tech/)
 
@@ -174,7 +179,7 @@ ubuntu/mysql          MySQL open source fast, stable, multi-thread…   70
 mysql/mysql-server    Optimized MySQL Server Docker images. Create…   1032      
 mysql/mysql-cluster   Experimental MySQL Cluster Docker images. Cr…   100
 ```
-#### docker pull <respository_name>[:tag] 从 Docker Hub 拉取镜像
+#### 3. `docker pull <respository_name>[:tag]` 从 Docker Hub 拉取镜像
 
 ```shell
 [root@iZ2ze41p5bh3hk80pucxofZ ~]# docker pull mysql
@@ -208,7 +213,7 @@ Status: Downloaded newer image for mysql:8.0
 docker.io/library/mysql:8.0
 ```
 
-#### docker rmi <image_id> ... 删除镜像
+#### 4. `docker rmi <image_id> ...` 删除镜像
 
 相当于 docker image rm <image_id>
 
@@ -227,11 +232,11 @@ Deleted: sha256:feb5d9fea6a5e9606aa995e879d862b825965ba48de054caab5ef356dc6b3412
 docker rmi -f $(docker images -qa)
 ```
 
-### 容器命令
+### （三）容器命令
 
 运行镜像会生成容器。
 
-#### docker run <image_id or image:tag> [command][args] 新建容器并启动
+#### 1. `docker run <image_id or image:tag> [command][args]` 新建容器并启动
 
 ```shell
 # options
@@ -258,7 +263,7 @@ bin  dev  etc  home  lib  lib64  lost+found  media  mnt  opt  proc  root  run  s
 
 退出：Ctrl+P+Q（不停止运行）
 
-#### docker ps 查看正在运行的容器列表
+#### 2. `docker ps` 查看正在运行的容器列表
 
 ```shell
 # options
@@ -279,12 +284,12 @@ CONTAINER ID   IMAGE       COMMAND                  CREATED          STATUS     
 be1e629fd9a4   mysql:8.0   "docker-entrypoint.s…"   30 minutes ago   Exited (1) 30 minutes ago                         mysql-test01
 06e63728ecb1   mysql:8.0   "docker-entrypoint.s…"   37 minutes ago   Up 37 minutes               3306/tcp, 33060/tcp   mysql-test
 ```
-#### 退出容器
+#### 3. 退出容器
 
 Ctrl+P+Q 退出容器（不停止运行）
 exit 退出容器并停止运行
 
-#### docker rm <container_name or container_id> ... 删除容器
+#### 4. `docker rm <container_name or container_id> ...` 删除容器
 
 ```shell
 docker rm -f $(docker ps -a -q)  # 删除所有容器
@@ -307,7 +312,7 @@ b3a10b9c3468
 96a28deeaa15
 ```
 
-#### Linux命令
+#### 5. Linux命令
 
 ```bash
 docker start <container_name or container_id>    # 启动容器
@@ -316,9 +321,9 @@ docker restart <container_name or container_id>  # 重启容器
 docker kill <container_name or container_id>     # 强制停止容器运行
 ```
 
-### 其他命令
+### （四）其他命令
 
-#### `-d` 后台启动容器
+#### 1. `-d` 后台启动容器
 
 ```shell
 [root@iZ2ze41p5bh3hk80pucxofZ nginx]# docker run -d -it --name centos-test01 centos /bin/bash
@@ -328,7 +333,7 @@ CONTAINER ID   IMAGE     COMMAND       CREATED         STATUS        PORTS     N
 b3a10b9c3468   centos    "/bin/bash"   3 seconds ago   Up 1 second             centos-test01
 ```
 
-#### docker logs <container_name or container_id> 查看容器日志
+#### 2. `docker logs <container_name or container_id>` 查看容器日志
 
 ```shell
 # options
@@ -357,9 +362,9 @@ hello
 hello
 ```
 
-#### docker top <container_id or container_name> 查看容器中运行的进程信息
+#### 3. `docker top <container_id or container_name>` 查看容器中运行的进程信息
 
-相当于 docker container top <container_id or container_name>
+相当于 `docker container top <container_id or container_name>`
 
 ```shell
 # 没有正在运行的容器会报错
@@ -370,7 +375,7 @@ UID                 PID                 PPID                C                   
 root                48919               48899               0                   13:14               pts/0               00:00:00            /bin/bash
 ```
 
-#### docker inspect <image_ or container_> 查看容器/镜像的元数据
+#### 4. `docker inspect <image_ or container_>` 查看容器/镜像的元数据
 
 ```shell
 # 查看镜像数据
@@ -463,7 +468,7 @@ root                48919               48899               0                   
 ]
 ```
 
-#### 进入正在运行的容器
+#### 5. 进入正在运行的容器
 
 `docker exec -it <container_id or container_name> <Command> [args]` 进入容器时会新建终端
 `docker attach <container_id or container_name>` 直接显示容器运行终端
@@ -482,7 +487,7 @@ root          35      20  0 05:34 pts/1    00:00:00 ps -ef
 [root@c724a243509e /]#
 ```
 
-#### 主机和容器之间文件拷贝
+#### 6. 主机和容器之间文件拷贝
 
 `docker cp <container:src_path> <dest_path>` 将容器文件拷贝到主机
 `docker cp <dest_path> <container:src_path>` 将主机文件拷贝到容器
@@ -511,13 +516,13 @@ Successfully copied 1.54kB to c724a243509e:/
 bin  dev  etc  home  lib  lib64  lost+found  media  mnt  opt  proc  root  run  sbin  srv  sys  test01.json  tmp  usr  var
 ```
 
-#### 总结
+### 总结
 
 ![Description](/images/102243-85929979.png)
 
-### 练习
+## 练习
 
-#### 拉取并运行 nginx
+### 1. 拉取并运行 nginx
 
 ```shell
 docker search nginx
@@ -577,6 +582,6 @@ Commercial support is available at
 这种方式访问需要防火墙开4000端口：
 ![Description](/images/102243-911701994.png)
 
-#### 拉取并运行tomcat
+### 2. 拉取并运行tomcat
 
-#### 部署 es + kibana
+### 3. 部署 es + kibana
