--- a/blogs/2025/09-17.md
+++ b/blogs/2025/09-17.md
@@ -21,7 +21,9 @@ next:
 
 ### 安装
 
-    `pnpm add -D @commitlint/cli @commitlint/config-conventional`
+```bash
+pnpm add -D @commitlint/cli @commitlint/config-conventional
+```
 
 ### 配置
 
@@ -53,15 +55,17 @@ export default {
 
 ##### （1）安装 husky
 
-    `npm install -D husky`
+```bash
+npm install -D husky
+```
 
 ##### （2）生成脚本文件
 
 ```bash
- # 在.husky/ 目录下创建 pre-commit 脚本文件
- npx husky init
- # 在 .husky/ 目录下创建 commit-msg 脚本文件
- echo npx --no commitlint --edit $1 > .husky/commit-msg
+# 在.husky/ 目录下创建 pre-commit 脚本文件
+npx husky init
+# 在 .husky/ 目录下创建 commit-msg 脚本文件
+echo npx --no commitlint --edit $1 > .husky/commit-msg
 ```
 
 ##### 示例
@@ -470,7 +474,7 @@ export default {
 
 prompt 属性包含三个字段：settings、messages、questions，需要在 commitlint 配置文件中进行 prompt 配置。
 
-##### 官方示例
+#### 官方示例
 
 ```js
 export default {
@@ -674,33 +678,33 @@ export default {
 
 ### 语法
 
-    ```
-    **<type>([optional scope]): <description>
-    [optional body]
-    [optional footer(s)]**
-    ```
+```
+<type>([optional scope]): <description>
+[optional body]
+[optional footer(s)]
+```
 
 #### 类型（type）
 
-    - feat —— 新增功能**（对应 Semver 的 MINOR）**
-    - fix —— 修复 bug **（对应 Semver 的 PATCH）**
-    - docs —— 更改文档
-    - style —— 不影响代码含义的变化（如空格、格式化、缺少分号等）
-    - refactor —— 代码重构，既不修复错误也不添加功能
-    - perf —— 提升性能的代码更改
-    - test —— 测试代码更改
-    - build —— 构建系统或外部依赖关系的更改
-    - ci —— 持续集成文件和脚本的更改
-    - chore —— 其他修改（不修改 src 或 test 文件）
-    - revert —— commit 回退
+- feat —— 新增功能**（对应 Semver 的 MINOR）**
+- fix —— 修复 bug **（对应 Semver 的 PATCH）**
+- docs —— 更改文档
+- style —— 不影响代码含义的变化（如空格、格式化、缺少分号等）
+- refactor —— 代码重构，既不修复错误也不添加功能
+- perf —— 提升性能的代码更改
+- test —— 测试代码更改
+- build —— 构建系统或外部依赖关系的更改
+- ci —— 持续集成文件和脚本的更改
+- chore —— 其他修改（不修改 src 或 test 文件）
+- revert —— commit 回退
 
 #### 范围（scope）
 
-    为提交类型添加一个使用圆括号包裹的作用域，以为其提供额外的上下文信息。例： `feat(parser): add ability to parse arrays.`
+为提交类型添加一个使用圆括号包裹的作用域，以为其提供额外的上下文信息。例： `feat(parser): add ability to parse arrays.`
 
 #### BREAKING CHANGE（footer）
 
-    破坏性 API 变更**（对应 Semver 的 MAJOR）**
+破坏性 API 变更**（对应 Semver 的 MAJOR）**
 
 ### 规则
 
