--- a/blogs/2025/12-16.md
+++ b/blogs/2025/12-16.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 使用 Github 搭建静态站点（一）
+title: 如何给文字添加“border”效果？
 date: 2025-12-16
 tags: CSS
 previous:
-  title: 如何给文字添加“border”效果？
+  title: 使用 Github 搭建静态站点（一）
   url: /blogs/2025/12-16.html
 ---
 
@@ -51,7 +51,7 @@ paint-order: stroke fill;
 </svg>
 ```
 
-`text-shadow` 不太推荐，因为画出来的效果不太精确，如果字体不是特别规则的话。
+`text-shadow` 不太推荐，因为画出来的效果不太精确，字体本身的形状一般都不是特别规则。
 
 推荐文章：
 
